# CIMAT_segundo_semestre

./: .gitignore
Aprendizaje_Maquina_1/Tarea_01/: Tarea01_Giovanni_Gamaliel_Lopez_Padilla.ipynb
Aprendizaje_Maquina_1/Tarea_01/Modules/: models.py
Aprendizaje_Maquina_1/Tarea_01/Results/: ADADELTA.csv  SGD.csv
Aprendizaje_Maquina_1/Tarea_02/results/: all.csv  last_conv.csv  none.csv
Aprendizaje_Maquina_1/Tarea_03/: Tarea03.ipynb
Aprendizaje_Maquina_1/Tarea_04/: Tarea04.ipynb
Aprendizaje_Maquina_1/Tarea_05/: Tarea_05.ipynb
Aprendizaje_Maquina_1/Tareas/Tarea_01/: Graphics.py  Tarea01_Giovanni_Gamaliel_Lopez_Padilla.ipynb  run.py  test.py
Aprendizaje_Maquina_1/Tareas/Tarea_02/: Tarea02.ipynb
Biomedica/: CONGRESOS_Enlaces.txt
Computacion_1/Practica_01/: crawling.py
Computacion_1/Practica_01/Data/: conferencia.txt
Computacion_1/Tarea_01/: Giovanni_Gamaliel_Lopez_Padilla.ipynb  Tarea01.ipynb  Untitled.ipynb
Estocastica/Tarea_01/Document/: Main.tex  references.bib
Estocastica/Tarea_01/Script/: CMakeLists.txt  README.md  create_task.py  main.cpp  slurm_script_Projects_Type1  tags  task
Estocastica/Tarea_01/Script/Data/: GSM2-272.ctr  ReadMe.txt
Estocastica/Tarea_01/Script/Graphics/: boxplot.py
Estocastica/Tarea_01/Script/Modules/: data.cpp  data.h  files.cpp  files.h  lines.cpp  lines.h  nodes.cpp  nodes.h
Estocastica/Tarea_01/Script/Output/: channels_34.txt  channels_39.txt  channels_49.txt  test.txt
Optimizacion_1/Tarea_04/: README.md
Optimizacion_1/Tarea_05/Scripts/: }  (+2 more)
Optimizacion_1/Tarea_07/: README.md
Patrones/Tarea_02/: README.md
(+2604 files in other folders)
